[gd_scene load_steps=5 format=3 uid="uid://djpwhq57mdf8y"]

[ext_resource type="Script" path="res://05.online-quiz/QuizScreenClient.gd" id="1_gk71t"]
[ext_resource type="PackedScene" uid="uid://c8kml2j3akt0" path="res://05.online-quiz/QuizPanel.tscn" id="2_prvlh"]
[ext_resource type="PackedScene" uid="uid://dsy8oy21ff58v" path="res://05.online-quiz/QuizWaitLabel.tscn" id="3_rq8tv"]
[ext_resource type="PackedScene" uid="uid://vpe7nrsqe22f" path="res://04.creating-an-online-chat/ChatClient.tscn" id="4_q8bbu"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gk71t")

[node name="QuizPanel" parent="." instance=ExtResource("2_prvlh")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 391.0
offset_top = 127.0
offset_right = 889.0
offset_bottom = 381.0
grow_horizontal = 1
grow_vertical = 1

[node name="DoubleOrLoose" parent="QuizPanel" index="6"]
visible = true
offset_left = 81.0
offset_top = 176.0
offset_right = 414.0
offset_bottom = 207.0

[node name="WaitLabel" parent="." instance=ExtResource("3_rq8tv")]
layout_mode = 1
offset_bottom = 70.0

[node name="Chat" parent="." instance=ExtResource("4_q8bbu")]
visible = false
layout_mode = 1

[connection signal="answered" from="QuizPanel" to="." method="_on_quiz_panel_answered"]
[connection signal="pressed" from="QuizPanel/DoubleOrLoose" to="." method="_on_double_or_loose_pressed"]

[editable path="QuizPanel"]
